--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -39287,7 +39287,7 @@ tr.hide {
   margin-left: 3px !important;
   color: #fff !important;
 }
-._1o7kvyb {
+.become-a-host__right-border-button {
   text-align: left !important;
   margin-left: 16px !important;
   margin-right: 16px !important;
@@ -39297,7 +39297,7 @@ tr.hide {
   color: #222 !important;
 }
 @media (min-width: 744px) {
-  ._1o7kvyb {
+  .become-a-host__right-border-button {
     margin-left: 24px !important;
     margin-right: 24px !important;
     margin-top: 32px !important;
@@ -42199,14 +42199,14 @@ tr.hide {
 .guest-container__form-wrapper[class][class] {
   color: var(--f-k-smk-x);
 }
-._1o7kvyb {
+.become-a-host__right-border-button {
   text-align: left !important;
   margin: 24px 16px !important;
   width: 100% !important;
   color: #222 !important;
 }
 @media (min-width: 744px) {
-  ._1o7kvyb {
+  .become-a-host__right-border-button {
     margin: 32px 24px !important;
   }
 }
