renaming property-type page - globally changes

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -39304,7 +39304,7 @@ tr.hide {
     margin-bottom: 32px !important;
   }
 }
-._1p10xl4a {
+.become-a-host__right-button-text {
   text-align: left !important;
   width: 100% !important;
   color: #222 !important;
@@ -39314,21 +39314,21 @@ tr.hide {
   margin-bottom: 10px !important;
 }
 @media (min-width: 744px) {
-  ._1p10xl4a {
+  .become-a-host__right-button-text {
     margin-left: 24px !important;
     margin-right: 16px !important;
     margin-top: 16px !important;
     margin-bottom: 16px !important;
   }
 }
-._1mplld7 {
+.become-a-host__right-button-img {
   margin-left: 8px !important;
   margin-right: 10px !important;
   margin-top: 10px !important;
   margin-bottom: 10px !important;
 }
 @media (min-width: 744px) {
-  ._1mplld7 {
+  .become-a-host__right-button-img {
     margin-left: 16px !important;
     margin-right: 16px !important;
     margin-top: 16px !important;
