append new css for insights, remove contents & _z4lmgp, add flex-xl, mq5rv0q -> max__width

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4126,6 +4126,9 @@ select[disabled] {
   .inline-block-xl {
     display: inline-block !important;
   }
+  .flex-xl {
+    display: flex !important;
+  }
 }
 @media (min-width: 1440px) {
   .block-xxl {
