--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -52758,7 +52758,7 @@ body {
 }
 
  @media (min-width: 1128px) {
-  ._z4lmgp,
+  .contents,
   .sched-content-md {
     display: none !important;
   }
@@ -52783,7 +52783,7 @@ body {
   .app-theme__navbar-wrapper {
     display: none !important;
   }
-  ._z4lmgp {
+  .contents {
     display: contents !important;
   }
   .app-theme__nav-container {
