--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -89,6 +89,9 @@
   .block-lg {
     display: block !important;
   }
+  .hidden-lg {
+    display: none !important;
+  }
 }
 @media (max-width: 1127px) {
   .mw-sm-50 {
