--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -55218,3 +55218,23 @@ body {
   position: relative !important;
   z-index: 2000 !important;
 }
+._1fn189i {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(221, 221, 221) !important;
+  background-color: rgb(255, 255, 255) !important;
+  outline: none !important;
+  padding: 12px !important;
+  margin: 0px 0px 12px !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  border-radius: 30px !important;
+  font-weight: 800 !important;
+  width: 100% !important;
+}
