rename same properties from insights

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50231,14 +50231,14 @@ body {
     opacity: 0.95 !important;
   }
 }
-.dir.plmw1e5[class][class] {
+.dir.wrapper-full[class][class] {
   margin-left: auto;
   margin-right: auto;
 }
 .max__width[class][class] {
   max-width: var(--gp-section-max-width, var(--maxWidth));
 }
-.plmw1e5[class][class] {
+.wrapper-full[class][class] {
   height: 100%;
   width: 100%;
 }
@@ -52290,7 +52290,7 @@ body {
    transition: box-shadow 0.4s ease 0s !important;
  }
  
- ._12d0llg5 {
+ .flex-bar {
    -webkit-box-align: center !important;
    text-align: justify !important;
    line-height: 0 !important;
@@ -52307,7 +52307,7 @@ body {
    flex-grow: 1 !important;
  }
  
- ._1iti0ju {
+ .flex-bar-item {
    display: inline-block !important;
    vertical-align: middle !important;
  }
@@ -52335,7 +52335,7 @@ body {
    vertical-align: bottom !important;
  }
  
- ._vwled5 {
+ .app-theme__navbar-left-logo-icon-wrapper {
    font-size: 23px !important;
    letter-spacing: -0.58px !important;
  }
@@ -52373,7 +52373,7 @@ body {
    width: 1px;
  }
  
- ._jro6t0 {
+ .flex {
    display: -webkit-box !important;
    display: -moz-box !important;
    display: -ms-flexbox !important;
@@ -52381,7 +52381,7 @@ body {
    display: flex !important;
  }
  
- ._rqfxvmb {
+ .flex-item {
    -ms-grid-row-align: center !important;
    -ms-flex-item-align: center !important;
    display: -webkit-inline-box !important;
@@ -52453,7 +52453,7 @@ body {
   will-change: transform, opacity !important;
 }
 
-._12d0llg5::after {
+.flex-bar::after {
   content: "" !important;
   display: inline-block !important;
   vertical-align: top !important;
@@ -52963,7 +52963,7 @@ body {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._19nw8j1 {
+.form-floating__control {
   position: relative !important;
   flex: 1 1 auto !important;
   padding: 0px !important;
